--- a/react-native/package.json
+++ b/react-native/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {},
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@octoguild/eslint-config-react-core": "^0.5.2",
     "eslint-plugin-detox": "^1.0.0",
