--- a/react/package.json
+++ b/react/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {},
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@emotion/eslint-plugin": "^11.10.0",
     "@octoguild/eslint-config-react-core": "^0.5.2"
