--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {},
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@octoguild/eslint-config-core": "^0.5.2",
     "eslint-plugin-chai-expect": "^3.0.0",
