--- a/react/package.json
+++ b/react/package.json
@@ -6,6 +6,9 @@
   "scripts": {},
   "author": "",
   "license": "ISC",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@emotion/eslint-plugin": "^11.10.0",
     "@octoguild/eslint-config-react-core": "^0.5.2"
