--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@octoguild/eslint-config-server",
-  "version": "0.5.2",
+  "version": "0.0.1-rc.1",
   "description": "",
   "main": "index.js",
   "scripts": {},
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
