--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0",
+  "version": "0.0.1-rc.1",
   "npmClient": "npm",
   "command": {
     "publish": {
@@ -12,5 +12,7 @@
     "react",
     "react-native",
     "server"
-  ]
+  ],
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "useWorkspaces": false
 }
