--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@octoguild/eslint-config-react",
-  "version": "0.5.2",
+  "version": "0.0.1-rc.1",
   "description": "",
   "main": "index.js",
   "scripts": {},
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@emotion/eslint-plugin": "^11.10.0",
-    "@octoguild/eslint-config-react-core": "^0.5.2"
+    "@octoguild/eslint-config-react-core": "^0.0.1-rc.1"
   },
   "peerDependencies": {
     "eslint": "^7.32.0",
