--- a/react-core/package.json
+++ b/react-core/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@octoguild/eslint-config-core": "^0.4.5",
+    "@octoguild/eslint-config-core": "^0.0.1-rc.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
