--- a/react-native/package.json
+++ b/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@octoguild/eslint-config-react-native",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {},
@@ -10,7 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@octoguild/eslint-config-react-core": "^0.0.1-rc.1",
+    "@octoguild/eslint-config-react-core": "^0.0.1",
     "eslint-plugin-detox": "^1.0.0",
     "eslint-plugin-react-native": "^4.0.0"
   },
