--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@octoguild/eslint-config-server",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {},
@@ -10,7 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@octoguild/eslint-config-core": "^0.0.1-rc.1",
+    "@octoguild/eslint-config-core": "^0.0.1",
     "eslint-plugin-chai-expect": "^3.0.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-filenames": "^1.3.2",
