--- a/core/package.json
+++ b/core/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-import": "^2.29.1"
   },
   "peerDependencies": {
-    "eslint": ">7.32.0",
+    "eslint": ">= 7.32.0",
     "typescript": "*"
   },
   "engines": {
