--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ncu": "ncu --deep"
   },
   "keywords": [
     "eslint-config"
@@ -26,6 +26,6 @@
     "node": ">= 14"
   },
   "dependencies": {
-    "lerna": "^6.4.1"
+    "lerna": "^8.0.1"
   }
 }
