--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "version": "lerna version",
     "publish": "lerna publish from-package",
-    "ncu": "ncu --deep"
+    "ncu": "ncu --deep -u"
   },
   "keywords": [
     "eslint-config"
@@ -28,6 +28,6 @@
     "node": ">= 14"
   },
   "dependencies": {
-    "lerna": "^8.0.1"
+    "lerna": "^8.1.2"
   }
 }
