--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server"
   ],
   "scripts": {
-    "version": "lerna version",
+    "version:note": "Never user version script. it conflicts with lerna",
+    "version:lerna": "lerna version",
     "publish": "lerna publish from-package",
     "ncu": "ncu --deep -u"
   },
