--- a/react/package.json
+++ b/react/package.json
@@ -12,5 +12,6 @@
   "dependencies": {
     "@emotion/eslint-plugin": "^11.12.0",
     "@octoguild/eslint-config-react-core": "^1.0.1"
-  }
+  },
+  "gitHead": "75a3d0c34620739b53b5411d4f5f7d91ff1b6aa8"
 }
